now i fixed the text align on the menus

--- a/src/app/Pages/user-page/navbar/user-menu/user-menu.component.scss
+++ b/src/app/Pages/user-page/navbar/user-menu/user-menu.component.scss
@@ -24,6 +24,7 @@ ul
     top: 80%;
     right: -23px;
     list-style: none;
+    text-align: center;
 
     @media(max-width: 640px)
     {
